crates/swc/tests/tsc-references/classExtendsItself.1.normal.js
//// [classExtendsItself.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var _$C = /*#__PURE__*/ function(C) {
    "use strict";
    _inherits(C1, C);
    function C1() {
        _class_call_check(this, C1);
        return _call_super(this, C1, arguments);
    }
    return C1;
} // error
(C1);
var _$D = /*#__PURE__*/ function(D) {
    "use strict";
    _inherits(D1, D);
    function D1() {
        _class_call_check(this, D1);
        return _call_super(this, D1, arguments);
    }
    return D1;
} // error
(D1);
var _$E = /*#__PURE__*/ function(E) {
    "use strict";
    _inherits(E1, E);
    function E1() {
        _class_call_check(this, E1);
        return _call_super(this, E1, arguments);
    }
    return E1;
} // error
(E1);
